--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -119,7 +119,7 @@
                           <!--  <h2>01</h2>-->
                           <!--  <img src="assets/images/features-icon-1.png" alt="">-->
                             <h4>Kenneth</h4>
-                            <p>I met my girlfriend on CUTinder during the quarantine for COVID. She is a science major student and i am a engineering student. We are both Christians who fell madly in love.</p>
+                            <p>I met my girlfriend on CUHKTinder during the quarantine for COVID. She is a science major student and i am a engineering student. We are both Christians who fell madly in love.</p>
                           <!--  <a href="#testimonials" class="main-button">
                                 Read More
                             </a>-->
@@ -340,7 +340,7 @@
                     </div>
                     <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
-                        <h2>More About <em>CUTinder</em></h2>
+                        <h2>More About <em>CUHKTinder</em></h2>
                         <p>Due to the COVID-19, many students said that it is very difficult to make friends with other schoolmates. Hence,
                         we develop this website to help other CUHKers meet new friends </p>
                         <ul class="social">
